@startuml
'https://plantuml.com/class-diagram

class Employee{
String firstName
String lastName
String ssid
getFirstName()
setFirstName()
getLastName()
setLastName()
getSSID()
setSSID()
getInfo()
printInfo()
}

class SalariedEmployee{
double weekly_salary
getWeeklySalary()
setWeeklySalary()
getInfo()
}

class HourlyEmployee{
double wage
double hoursWorked
getWage()
setWage()
getHoursWorked()
setHoursWorked()
getInfo()
}

class CommisionEmployee{
double commisionRate
double grossSales
getCommisionRate()
setCommisionRate()
getGrossSales()
setGrossSales()
getInfo()
}

class BaseEmployee {
double baseSalary
getBaseSalary()
setBaseSalary()
getInfo()
}

Employee <|-- SalariedEmployee
Employee <|-- HourlyEmployee
Employee <|-- CommisionEmployee
Employee <|-- BaseEmployee
@enduml